--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -34,4 +34,13 @@
     android:layout_gravity="center|bottom"
     android:layout_marginBottom="50dp" />
 
-    </FrameLayout>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="310dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="25dp"
+        android:background="#580F37EB"
+        android:text="ЛАБОРАТОРНАЯ РАБОТА 01 FRAMELAYOUT" />
+
+</FrameLayout>
